{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "StandardControls",
            "id": "d61d3372-a49f-42b7-afa6-bdd97a0b154d",
            "actions": [
                {
                    "name": "SelectPlayer",
                    "type": "Button",
                    "id": "e79aa25c-2438-46bd-a88b-b3c518a814ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap,SlowTap"
                },
                {
                    "name": "SelectWaypoint",
                    "type": "Button",
                    "id": "177c4d57-3d92-406c-bab6-912a94f08652",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold,Tap"
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "73f1d0d7-d9a4-4960-a09a-2d2c293a2ae0",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCamRight",
                    "type": "Button",
                    "id": "a6e19ab9-8955-4a27-88d7-096bb472915f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateCamLeft",
                    "type": "Button",
                    "id": "8010e309-7ee7-4120-b35a-c215a71d148e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aaacd5e4-36b0-41c1-8e03-bfa539929a12",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b74859af-006b-456a-ac31-e9328645f657",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectWaypoint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e1b19104-4302-4fec-af4d-95017126cbfa",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e5877bd-8fec-4040-a9c9-972903fa32ea",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c52bbf8-1c62-4b08-9ecd-695fb6f5a409",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}